[workspace]
resolver = "3"
members = ["sembctl"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = "4.6.0"
clap_complete = "4.6.0"
color-eyre = "0.6.5"
comfy-table = "7.2.2"
dirs = "6.0.0"
eyre = "0.6.12"
indicatif = "0.18.4"
serde = "1.0.228"
toml = "1.1.2"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.23"
