[package]
name = "sembctl"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
color-eyre.workspace = true
dirs.workspace = true
eyre.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
