[package]
name = "sembctl"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
color-eyre.workspace = true
comfy-table.workspace = true
dirs.workspace = true
eyre.workspace = true
indicatif.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
